deployment/apps/nginx/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - test.apps.example.com
  rules:
  - matches:
    - path:	
        type: PathPrefix	
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: my-nginx-service
      port: 80
      weight: 1
